src/App.css
/* nav {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-size: 22px;
  height: 100px;
  font-family: 'Abril Fatface', cursive;
}

nav a {
  text-decoration: none;
} */



body {
  /* background-color: #8587de; */
  background: rgb(133,135,222);
  background: linear-gradient(180deg, rgba(133,135,222,1) 0%, rgba(133,135,222,1) 41%, rgba(67,69,129,1) 100%); 
  background-attachment: fixed;
  /* background-color: #9FB7F5 */
}

.App {
  text-align: center;
}

.header{
  display: flex;
  width: 1200px;
  justify-content: space-evenly;
  /* color:#96E7FA; */
  
  height: 150px;
  align-items: center;
  /* text-shadow: -1px -1px  slateblue; */
  /* background-color:#3b3b54;
  position: fixed;
  z-index: 99; */
}

.header p{
  cursor: pointer;
  font-size: 22px;
  font-family: 'Cairo', sans-serif;
 font-family: 'Yanone Kaffeesatz', sans-serif;
 font-family: 'Quicksand', sans-serif; 
 font-family: 'Fjalla One', sans-serif;
}

#doug{
  font-weight: bold;
  font-size: 28px;

}

/* ((( Home */

p {
  font-family: 'Yanone Kaffeesatz', sans-serif;
  margin: 0;
  font-size: 48px;
}

.section-header {
  display: flex;
  font-family: 'Fjalla One', sans-serif;
  margin-top: 55px;
  font-size: 77px;
  height: 200px;
  align-items: center;
  
}

.home-master-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 2%;
}

.home-container-top {
  display: flex;
  width: 1200px;
}

.home-top-subcontainer1 {
  display: flex;
  width: 50%;
  align-items: flex-end;
  justify-content: center;
}

.home-top-subcontainer2 {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  width: 50%;
}


.home-child-top1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  height: 300px;
  width: 300px;
  background-color: #85B6DE;
  color: #7688B5;
  transition: .6s ease-out;
  animation: blink 6s .6s infinite;
  font-family: 'Abril Fatface', cursive;
  line-height: 25px;
  border-top-left-radius: 100%;
}

.home-child-top2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 300px;
  width: 300px;
  background-color: #B096FA;
  color: #7688B5;
  box-shadow: 10px 12px 16px 4px darkslateblue;
  transition: .6s ease-out;
  animation: blink 6s .8s infinite;
  font-family: 'Fjalla One', sans-serif;
  border-top-right-radius: 100%;
}

.home-child-top2 h1 {
  margin-left: 20px;
}

.home-child-top3 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 300px;
  width: 300px;
  background-color: #85B6DE;
  box-shadow: 1px 1px 1px 1px;
  color: #7688B5;
  transition: .2s;
  animation: blink 6s 1s infinite;
  font-family: 'Quicksand', sans-serif;
  border-top-left-radius: 7%;
}

.home-child-top4 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 300px;
  width: 300px;
  background-color: #B096FA;
  color: #7688B5;
  box-shadow: 12px 12px 16px 2px darkslateblue;
  transition: .2s;
  animation: blink 6s 1.2s infinite;
  font-family: 'Cairo', sans-serif;
  border-top-right-radius: 7%;
}

.home-child-top1:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid aliceblue;
}

.home-child-top2:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid lavenderblush;
}

.home-child-top3:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid aliceblue;
}

.home-child-top4:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid lavenderblush;
}

.home-container-bottom {
  display: flex;
  width: 1200px;
}

.home-bottom-subcontainer1 {
  display: flex;
  justify-content: center;
  width: 50%;
}

.home-bottom-subcontainer2 {
  display: flex;
  justify-content: center;
  width: 50%;
}

.home-child-bottom1 {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  height: 300px;
  width: 300px;
  background-color: #96E7FA;
  color: #7688B5;
  font-size: 22px;
  box-shadow: 10px 15px 16px 0px darkslateblue;
  transition: .6s;
  animation: blink 6s .7s infinite;
  font-family: 'Yanone Kaffeesatz', sans-serif;
  border-bottom-left-radius: 100%;
}

.home-child-bottom2 {
  display: flex;
  height: 300px;
  width: 300px;
  background-color: #85B6DE;
  color: #9FB7F5;
  font-weight: bold;
  /* box-shadow: 10px 12px 8px 2px #7688B5; */
  box-shadow: 10px 12px 16px 2px darkslateblue;
  transition: .6s;
  animation: blink 6s .9s infinite;
  border-bottom-right-radius: 100%;
}

.home-child-bottom3 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 300px;
  width: 300px;
  background-color: #96E7FA;
  color: #7688B5;
  font-size: 22px;
  box-shadow: 12px 12px 16px 3px darkslateblue;
  transition: .2s;
  animation: blink 6s 1.1s infinite;
  border-bottom-left-radius: 7%;
}

.home-child-bottom4 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 300px;
  width: 300px;
  background-color: #85B6DE;
  color: #9FB7F5;
  font-weight: bold;
  /* box-shadow: 10px 12px 8px 4px #7688B5; */
  box-shadow: 10px 12px 16px 2px darkslateblue;
  transition: .2s;
  animation: blink 6s 1.3s infinite;
  border-bottom-right-radius: 7%;
}

.home-child-bottom1:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 2px solid white;
}

.home-child-bottom2:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid aliceblue;
}

.home-child-bottom3:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 2px solid white;
  
}

.home-child-bottom4:hover {
  z-index: 1;
  transition: .2s;
  mix-blend-mode: hard-light;
  box-shadow: none;
  outline: 1px solid aliceblue;
}

.dev-icon {
  height: 184px;
  width: 130px;
  padding: 55px;
  padding-bottom: 0px;
  filter: drop-shadow(3px 3px 3px);
}

.javascript-icon {
  height: 145px;
  width: 145px;
  padding: 45px;
  padding-right: 40px;
  filter: drop-shadow(3px 3px 3px);
  border-radius: 25%;
}

.react-icon {
  height: 170px;
  width: 170px;
  padding: 30px;
  filter: drop-shadow(3px 3px 3px slateblue);
}

.express-icon {
  height: 64px;
  width: 222px;
  filter: drop-shadow(3px 3px 3px);
}

.mongodb-icon {
  height: 160px;
  width: 233px;
}

/* .mysql-icon{

} */

.node-icon {
  height: 156px;
  width: 255px;
}

@keyframes blink {
  0% {
    filter: contrast(1)
  }

  60% {
    filter: contrast(1);
  }

  70% {
    filter: contrast(1.75)
  }

  100% {
    filter: contrast(1)
  }
}

/* Home ))) */

.all-film{
  background: rgb(240,248,255);
  background: linear-gradient(90deg, rgba(240,248,255,0.2) 0%, rgba(110,111,180,1) 50%, rgba(110,111,180,1) 75%, rgba(89,89,144,1) 100%);
  border-radius: 25px;
  padding-left: 40px;
  padding-top:5px;
  padding-bottom:5px;
}

.all-film p{
  font-family: 'Abril Fatface', cursive;
  font-size: 32px;
}

.filmstrip {
  display: flex;
  align-items: center;
  width: 1111px;
}

.filmstrip img{
  display: flex;
  margin: 10px;
}

.smallpic {
  height: 122px;
  width: 233px;
  /* object-fit: cover; */
  border-radius: 7px;
  transition: .3s;
  box-shadow: 1px 1px 4px 2px darkslateblue;
}

.smallpic:hover {
transform: scale(1.07);
transition: .2s;
box-shadow: 5px 5px 13px 0px;
filter: brightness(110%);
cursor: url('./Images/expand_cursor_5.png'),auto;
}

.screenshot {
  display: flex;
  justify-content: center;
  align-items: center;
  top: 50%;
  left: 50%;
  position: fixed;
  z-index: 999;
}

.screenshot img {
  position: fixed;
  animation: .55s ease-out 0s zoomIn,
      .75s ease-out 0s fadeIn,
      .75s ease-out 0s unRound;
  width: 90vw;
  border: 2px solid slategrey;
  box-shadow: 0px 0px 50px darkslateblue;
  border-radius: 0px;
}

.screenshot img:hover {
cursor: url('./Images/x_cursor_3.png'),auto;
}




@keyframes zoomIn {
  0% {
    transform: scale(0);
  }

  100% {
    transform: scale(1);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0%;
  }

  55% {
    opacity: 0%;
  }

  100% {
    opacity: 100%;
  }
}

@keyframes unRound {
  0% {
    border-radius: 50%;
  }

  100% {
    border-radius: 0px;
  }
}

.credentials{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.certification{
  margin: 50px;
  width: 555px;
  height: 419px;
}

.contact{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.email-phone {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin: 30px;
  margin-top: 0;
}

.email-phone p {
  font-size: 26px;
  margin: 10px;
  font-family: 'Cairo', sans-serif;
}

.all-contact-icons{
  display: flex;
  justify-content: space-evenly;
  width: 400px;
}

.contact-icon{
  width: 60px;
}

.contact-icon:hover{
  cursor: pointer;
}

.hobbies{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 1200px;
  height: 200px;
  flex-wrap:wrap
}

.hobby-icon{
  height: 130px;
  transition: .2s;
}

.hobby-icon-wide{
  width: 150px;
  transition: .2s;
}

.hobby-icon:hover{
  filter: invert(80%) drop-shadow(0px 0px 5px);
  transition: .5s;
}

.hobby-icon-wide:hover{
  filter: invert(80%) drop-shadow(0px 0px 5px);
  transition: .5s;
}



.to-top-icon{
  height: 50px;
  width: 50px;
  position: fixed;
  object-fit: cover;
  object-position: 0% 0%; /* try 20px 10px */ 
  bottom: 50px;
  right:100px;
  opacity: 20%;
  z-index: 998;
  transition: opacity .2s;
}

.to-top-icon:hover{
  width: unset;
  right: 15px;
  transition: opacity .5s;
  opacity: 100%;
}

